--- a/css/style.css
+++ b/css/style.css
@@ -56,12 +56,12 @@ body{
 }
 
 footer{
-    text-align: center;
+    width: 100%;
     margin-top: auto;
 }
 
 .footer{
-    width: 100%;
+    text-align: center;
     background-color: #ff4d4d1a;
     color: #fff;
     padding-bottom: 10px;
@@ -104,6 +104,7 @@ footer{
 
 .max1000{
     max-width: 1000px;
+    margin: 0 auto;
 }
 
 .top {
